[package]
name = "ledger-rs-lib-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
license="AGPL-3.0"
repository = "https://github.com/ledger-rs/ledger-rs-lib-wasm"
categories = ['finance']
keywords = ["wasm", "library", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ledger-rs-lib = { path="d:/src/ledger-rs-lib" }
wasm-bindgen = "0.2.85"
